--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
 </head>
 <body>
 
-  <img src="IMG_0139.png" alt="Logo Amadori">
+  <!-- Logo aggiornato con estensione maiuscola -->
+  <img src="IMG_0139.PNG" alt="Logo Amadori">
 
   <h2>Allevamento di Morro D Oro</h2>
   <div class="section-title">Ingresso Manutentori</div>
@@ -144,7 +145,6 @@
     }
 
     function checkButtonVisibility() {
-      // Non mostrare niente finché non verifichi la posizione
       button.style.display = "none";
       statusMsg.style.display = "none";
       closedMsg.style.display = "none";
@@ -173,4 +173,3 @@
 
 </body>
 </html>
-    
