--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
   <div class="note">
     Non premere il pulsante se non sei presente davanti al cancello.<br>
-    Se non va, contattare il custode.
+    Se non funziona, contattare il custode.
   </div>
 
   <script>
