--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
   <div id="geoError">Uhm, non sei davanti al cancello…</div>
 
   <div class="note">
-    Ricorda di accettare/consentire la posizione attuale del tuo dispositivo per il corretto funzionamento<br>
+    Ricorda di accettare/consentire la posizione attuale del tuo dispositivo per il corretto funzionamento.<br>
     Non premere il pulsante se non sei presente davanti al cancello.<br>
     Se non funziona, contattare il custode.
   </div>
